Commented usage of GPU_MEMORY_UTILIZATION

--- a/.env
+++ b/.env
@@ -23,7 +23,8 @@ RAM_MIN_LIMIT=10G
 #RAM_MIN_LIMIT < MEMORY_SWAP_MAX_LIMIT, SWAP = MEMORY_SWAP_MAX_LIMIT - RAM_MIN_LIMIT
 MEMORY_SWAP_MAX_LIMIT=20G
 
-GPU_MEMORY_UTILIZATION=0.5
+#GPU_MEMORY_UTILIZATION=0.5
+#useless for now, use --lowvram or --normalvram or --highvram
 
 # https://docs.comfy.org/interface/settings/server-config
 
